# RufAlu

./: .gitignore  CMakeLists.txt  README.md
aluList/: primate_non-LTR_Retrotransposon.fasta.fai
libs/: CMakeLists.txt  Makefile  aluHead.cpp  aluHead.h  cmake_install.cmake  contig.cpp  contig.h  debug.cpp  debug.h  denovo.cpp  denovo.h  discordantAndChimericReads.cpp  discordantAndChimericReads.h  fastqParse.h  intersect.cpp  intersect.h  knownAlus.cpp  knownAlus.h  polyATail.cpp  polyATail.cpp~  polyATail.h  util.cpp  util.h  vcfWriter.cpp  vcfWriter.h
src/: CMakeLists.txt  aluDetect  aluDetect.cpp
tests/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  gtest.cpp  knownAluTests.hpp  polyATest.cpp  polyATest.cpp~  polyATests.hpp  runTests  tests.cpp
